--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     width: 100%;
     height: 500px;
     background-color: aliceblue;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 .area h2{
